Final revision of the project, report and code completed

--- a/Code/Analysis.ipynb
+++ b/Code/Analysis.ipynb
@@ -44,6 +44,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "6633319a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 240298 entries, 0 to 240297\n",
+      "Data columns (total 51 columns):\n",
+      " #   Column                          Non-Null Count   Dtype  \n",
+      "---  ------                          --------------   -----  \n",
+      " 0   PERIOD_BEGIN                    240298 non-null  object \n",
+      " 1   PERIOD_END                      240298 non-null  object \n",
+      " 2   PERIOD_DURATION                 240298 non-null  int64  \n",
+      " 3   REGION_TYPE                     240298 non-null  object \n",
+      " 4   REGION_TYPE_ID                  240298 non-null  int64  \n",
+      " 5   TABLE_ID                        240298 non-null  int64  \n",
+      " 6   REGION                          240298 non-null  object \n",
+      " 7   CITY                            240298 non-null  object \n",
+      " 8   STATE                           240298 non-null  object \n",
+      " 9   STATE_CODE                      240298 non-null  object \n",
+      " 10  PROPERTY_TYPE                   240298 non-null  object \n",
+      " 11  PROPERTY_TYPE_ID                240298 non-null  int64  \n",
+      " 12  MEDIAN_LIST_PRICE               205834 non-null  float64\n",
+      " 13  MEDIAN_LIST_PRICE_MOM           176141 non-null  float64\n",
+      " 14  MEDIAN_LIST_PRICE_YOY           175214 non-null  float64\n",
+      " 15  MEDIAN_PPSF                     240174 non-null  float64\n",
+      " 16  MEDIAN_PPSF_MOM                 201359 non-null  float64\n",
+      " 17  MEDIAN_PPSF_YOY                 200411 non-null  float64\n",
+      " 18  MEDIAN_LIST_PPSF                205782 non-null  float64\n",
+      " 19  MEDIAN_LIST_PPSF_MOM            176084 non-null  float64\n",
+      " 20  MEDIAN_LIST_PPSF_YOY            175137 non-null  float64\n",
+      " 21  HOMES_SOLD                      240298 non-null  float64\n",
+      " 22  HOMES_SOLD_MOM                  201505 non-null  float64\n",
+      " 23  HOMES_SOLD_YOY                  200575 non-null  float64\n",
+      " 24  PENDING_SALES                   215516 non-null  float64\n",
+      " 25  PENDING_SALES_MOM               185170 non-null  float64\n",
+      " 26  PENDING_SALES_YOY               182554 non-null  float64\n",
+      " 27  NEW_LISTINGS                    205915 non-null  float64\n",
+      " 28  NEW_LISTINGS_MOM                176238 non-null  float64\n",
+      " 29  NEW_LISTINGS_YOY                175300 non-null  float64\n",
+      " 30  INVENTORY                       224219 non-null  float64\n",
+      " 31  INVENTORY_MOM                   192892 non-null  float64\n",
+      " 32  INVENTORY_YOY                   190931 non-null  float64\n",
+      " 33  MONTHS_OF_SUPPLY                224219 non-null  float64\n",
+      " 34  MONTHS_OF_SUPPLY_MOM            192892 non-null  float64\n",
+      " 35  MONTHS_OF_SUPPLY_YOY            190931 non-null  float64\n",
+      " 36  MEDIAN_DOM                      239806 non-null  float64\n",
+      " 37  MEDIAN_DOM_MOM                  200970 non-null  float64\n",
+      " 38  MEDIAN_DOM_YOY                  200090 non-null  float64\n",
+      " 39  AVG_SALE_TO_LIST                240103 non-null  float64\n",
+      " 40  AVG_SALE_TO_LIST_MOM            201295 non-null  float64\n",
+      " 41  AVG_SALE_TO_LIST_YOY            200372 non-null  float64\n",
+      " 42  SOLD_ABOVE_LIST                 240298 non-null  float64\n",
+      " 43  SOLD_ABOVE_LIST_MOM             201505 non-null  float64\n",
+      " 44  SOLD_ABOVE_LIST_YOY             200575 non-null  float64\n",
+      " 45  PRICE_DROPS                     149764 non-null  float64\n",
+      " 46  PRICE_DROPS_MOM                 124245 non-null  float64\n",
+      " 47  PRICE_DROPS_YOY                 121089 non-null  float64\n",
+      " 48  PARENT_METRO_REGION             240298 non-null  object \n",
+      " 49  PARENT_METRO_REGION_METRO_CODE  240298 non-null  int64  \n",
+      " 50  year                            240298 non-null  int64  \n",
+      "dtypes: float64(36), int64(6), object(9)\n",
+      "memory usage: 93.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "marketData.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f621e5f1",
    "metadata": {},
@@ -1572,12 +1647,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6995e11e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixing the first rows where \"Jurisdiction by Geography\" is a row with NaN values due to multi-demonsionality\n",
+    "# Fixing the first rows where \"Jurisdiction by Geography\" is a row with NaN values due to multi-demensionality\n",
     "Crime2015 = Crime2015[1:]\n",
     "Crime2016 = Crime2016[1:]\n",
     "Crime2017 = Crime2017[1:]\n",
@@ -5506,6 +5581,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5fc911d",
+   "metadata": {},
+   "source": [
+    "## How does the crime rate in a city relate to its median house price?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "ae0cea8c",
@@ -7130,7 +7213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 122,
    "id": "a4a42a05",
    "metadata": {},
    "outputs": [
@@ -7169,11 +7252,12 @@
        "       'Gambling Equipment Violations', 'Sports Tampering',\n",
        "       'Pornography/Obscene Material', 'Prostitution',\n",
        "       'Assisting or Promoting Prostitution', 'Purchasing Prostitution',\n",
-       "       'Weapon Law Violations', 'Animal Cruelty', 'Year', 'SAFETY_LABEL'],\n",
+       "       'Weapon Law Violations', 'Animal Cruelty', 'Year', 'SAFETY_LABEL',\n",
+       "       'price_lag_1', 'price_lag_3', 'crime_lag_1', 'crime_lag_3'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
